// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TranslatorHeader 01 no content 1`] = `
<div>
  <div
    className="giu-floats"
    style={
      Object {
        "height": 0,
        "left": 0,
        "position": "absolute",
        "top": 0,
        "width": 0,
      }
    }
  />
  <div
    className="tableHeaderRow"
    style={
      Object {
        "WebkitFlex": "none",
        "display": "flex",
        "flex": "none",
        "flexDirection": "row",
        "fontWeight": "bold",
        "position": "relative",
      }
    }
  >
    <div
      style={
        Object {
          "WebkitFlex": "1 1 0px",
          "backgroundColor": "#f2f0ff",
          "borderBottom": "1px solid #1600a3",
          "flex": "1 1 0px",
          "fontWeight": 900,
          "letterSpacing": 3,
          "marginRight": 5,
          "paddingBottom": 3,
          "paddingLeft": 5,
          "paddingRight": 17,
          "paddingTop": 3,
          "textAlign": "center",
        }
      }
    >
      MESSAGES
       
      <span
        style={
          Object {
            "color": "darkgrey",
          }
        }
      >
        [
        <span
          title="Used messages"
        >
          0
        </span>
         / 
        <span
          title="Total messages"
        >
          0
        </span>
        ]
      </span>
       
      <i
        className="giu-icon fa fa-refresh"
        onClick={[Function]}
        style={
          Object {
            "color": undefined,
            "cursor": "pointer",
            "fontSize": undefined,
            "letterSpacing": "normal",
          }
        }
        title="Parse source files to update the message list"
      />
    </div>
    <div
      className="madyLangHeader"
      style={
        Object {
          "WebkitFlex": "1 1 0px",
          "backgroundColor": "#f2f0ff",
          "borderBottom": "1px solid #1600a3",
          "flex": "1 1 0px",
          "fontWeight": 900,
          "letterSpacing": 3,
          "marginRight": 5,
          "paddingBottom": 3,
          "paddingLeft": 5,
          "paddingRight": 5,
          "paddingTop": 3,
          "textAlign": "center",
        }
      }
    >
      <div
        style={
          Object {
            "display": "inline-block",
            "paddingRight": 5,
            "position": "relative",
          }
        }
        title="Change language"
      >
        <i
          className="giu-icon fa fa-caret-down"
          style={
            Object {
              "color": undefined,
              "cursor": "pointer",
              "fontSize": undefined,
              "letterSpacing": "normal",
              "marginRight": 5,
            }
          }
        />
        ca
        <select
          className="giu-select-native"
          id={0}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          style={
            Object {
              "backgroundColor": "default",
              "border": "default",
              "color": "inherit",
              "cursor": "pointer",
              "fontFamily": "inherit",
              "fontSize": "inherit",
              "fontWeight": "inherit",
              "left": 0,
              "opacity": 0,
              "position": "absolute",
              "top": 0,
              "width": "100%",
            }
          }
          type="native"
          value="\\"ca\\""
        >
          <option
            id="\\"es\\""
            value="\\"es\\""
          >
            es
          </option>
          <option
            id="\\"ca\\""
            value="\\"ca\\""
          >
            ca
          </option>
          <option
            id="\\"en\\""
            value="\\"en\\""
          >
            en
          </option>
        </select>
      </div>
       
      <span
        style={
          Object {
            "color": "darkgrey",
          }
        }
      >
        [
        <span
          title="Translations"
        >
          0
        </span>
         / 
        <span
          title="Used messages"
        >
          0
        </span>
        ]
      </span>
       
      <i
        className="giu-icon fa fa-remove"
        id={0}
        style={
          Object {
            "color": undefined,
            "cursor": "pointer",
            "fontSize": undefined,
            "letterSpacing": "normal",
          }
        }
        title="Remove column (does NOT delete any translations)"
      />
    </div>
    <div
      className="madyLangHeader"
      style={
        Object {
          "WebkitFlex": "1 1 0px",
          "backgroundColor": "#f2f0ff",
          "borderBottom": "1px solid #1600a3",
          "flex": "1 1 0px",
          "fontWeight": 900,
          "letterSpacing": 3,
          "marginRight": 5,
          "paddingBottom": 3,
          "paddingLeft": 5,
          "paddingRight": 5,
          "paddingTop": 3,
          "textAlign": "center",
        }
      }
    >
      <div
        style={
          Object {
            "display": "inline-block",
            "paddingRight": 5,
            "position": "relative",
          }
        }
        title="Change language"
      >
        <i
          className="giu-icon fa fa-caret-down"
          style={
            Object {
              "color": undefined,
              "cursor": "pointer",
              "fontSize": undefined,
              "letterSpacing": "normal",
              "marginRight": 5,
            }
          }
        />
        es
        <select
          className="giu-select-native"
          id={1}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          style={
            Object {
              "backgroundColor": "default",
              "border": "default",
              "color": "inherit",
              "cursor": "pointer",
              "fontFamily": "inherit",
              "fontSize": "inherit",
              "fontWeight": "inherit",
              "left": 0,
              "opacity": 0,
              "position": "absolute",
              "top": 0,
              "width": "100%",
            }
          }
          type="native"
          value="\\"es\\""
        >
          <option
            id="\\"es\\""
            value="\\"es\\""
          >
            es
          </option>
          <option
            id="\\"ca\\""
            value="\\"ca\\""
          >
            ca
          </option>
          <option
            id="\\"en\\""
            value="\\"en\\""
          >
            en
          </option>
        </select>
      </div>
       
      <span
        style={
          Object {
            "color": "darkgrey",
          }
        }
      >
        [
        <span
          title="Translations"
        >
          0
        </span>
         / 
        <span
          title="Used messages"
        >
          0
        </span>
        ]
      </span>
       
      <i
        className="giu-icon fa fa-remove"
        id={1}
        style={
          Object {
            "color": undefined,
            "cursor": "pointer",
            "fontSize": undefined,
            "letterSpacing": "normal",
          }
        }
        title="Remove column (does NOT delete any translations)"
      />
    </div>
    <div
      id="madyBtnAddLang"
      style={
        Object {
          "cursor": "pointer",
          "fontWeight": 900,
          "letterSpacing": 3,
          "padding": "3px 6px",
          "position": "absolute",
          "right": 5,
          "top": 0,
        }
      }
      title="Add column"
    >
      <i
        className="giu-icon fa fa-plus"
        style={
          Object {
            "color": undefined,
            "cursor": "pointer",
            "fontSize": undefined,
            "letterSpacing": "normal",
          }
        }
      />
    </div>
    <div
      style={
        Object {
          "WebkitFlex": "0 0 0px",
          "flex": "0 0 0px",
        }
      }
    />
  </div>
</div>
------------HTML PREVIEW---------------
<div>
  <div
    class="giu-floats"
    style="height:0;left:0;position:absolute;top:0;width:0;"
  >
  </div>
  <div
    class="tableHeaderRow"
    style="-webkit-flex:none;display:flex;flex:none;flex-direction:row;font-weight:bold;position:relative;"
  >
    <div style="-webkit-flex:1 1 0px;background-color:#f2f0ff;border-bottom:1px solid #1600a3;flex:1 1 0px;font-weight:900;letter-spacing:3px;margin-right:5px;padding-bottom:3px;padding-left:5px;padding-right:17px;padding-top:3px;text-align:center;">
      MESSAGES
       
      <span style="color:darkgrey;">
        [
        <span title="Used messages">
          0
        </span>
         / 
        <span title="Total messages">
          0
        </span>
        ]
      </span>
       
      <i
        class="giu-icon fa fa-refresh"
        style="cursor:pointer;letter-spacing:normal;"
        title="Parse source files to update the message list"
      >
      </i>
    </div>
    <div
      class="madyLangHeader"
      style="-webkit-flex:1 1 0px;background-color:#f2f0ff;border-bottom:1px solid #1600a3;flex:1 1 0px;font-weight:900;letter-spacing:3px;margin-right:5px;padding-bottom:3px;padding-left:5px;padding-right:5px;padding-top:3px;text-align:center;"
    >
      <div
        style="display:inline-block;padding-right:5px;position:relative;"
        title="Change language"
      >
        <i
          class="giu-icon fa fa-caret-down"
          style="cursor:pointer;letter-spacing:normal;margin-right:5px;"
        >
        </i>
        ca
        <select
          class="giu-select-native"
          style="background-color:default;border:default;color:inherit;cursor:pointer;font-family:inherit;font-size:inherit;font-weight:inherit;left:0;opacity:0;position:absolute;top:0;width:100%;"
          type="native"
          value="\\"ca\\""
        >
          <option
            id="\\"es\\""
            value="\\"es\\""
          >
            es
          </option>
          <option
            id="\\"ca\\""
            value="\\"ca\\""
          >
            ca
          </option>
          <option
            id="\\"en\\""
            value="\\"en\\""
          >
            en
          </option>
        </select>
      </div>
       
      <span style="color:darkgrey;">
        [
        <span title="Translations">
          0
        </span>
         / 
        <span title="Used messages">
          0
        </span>
        ]
      </span>
       
      <i
        class="giu-icon fa fa-remove"
        style="cursor:pointer;letter-spacing:normal;"
        title="Remove column (does NOT delete any translations)"
      >
      </i>
    </div>
    <div
      class="madyLangHeader"
      style="-webkit-flex:1 1 0px;background-color:#f2f0ff;border-bottom:1px solid #1600a3;flex:1 1 0px;font-weight:900;letter-spacing:3px;margin-right:5px;padding-bottom:3px;padding-left:5px;padding-right:5px;padding-top:3px;text-align:center;"
    >
      <div
        style="display:inline-block;padding-right:5px;position:relative;"
        title="Change language"
      >
        <i
          class="giu-icon fa fa-caret-down"
          style="cursor:pointer;letter-spacing:normal;margin-right:5px;"
        >
        </i>
        es
        <select
          class="giu-select-native"
          style="background-color:default;border:default;color:inherit;cursor:pointer;font-family:inherit;font-size:inherit;font-weight:inherit;left:0;opacity:0;position:absolute;top:0;width:100%;"
          type="native"
          value="\\"es\\""
        >
          <option
            id="\\"es\\""
            value="\\"es\\""
          >
            es
          </option>
          <option
            id="\\"ca\\""
            value="\\"ca\\""
          >
            ca
          </option>
          <option
            id="\\"en\\""
            value="\\"en\\""
          >
            en
          </option>
        </select>
      </div>
       
      <span style="color:darkgrey;">
        [
        <span title="Translations">
          0
        </span>
         / 
        <span title="Used messages">
          0
        </span>
        ]
      </span>
       
      <i
        class="giu-icon fa fa-remove"
        style="cursor:pointer;letter-spacing:normal;"
        title="Remove column (does NOT delete any translations)"
      >
      </i>
    </div>
    <div
      id="madyBtnAddLang"
      style="cursor:pointer;font-weight:900;letter-spacing:3px;padding:3px 6px;position:absolute;right:5px;top:0;"
      title="Add column"
    >
      <i
        class="giu-icon fa fa-plus"
        style="cursor:pointer;letter-spacing:normal;"
      >
      </i>
    </div>
    <div style="-webkit-flex:0 0 0px;flex:0 0 0px;"></div>
  </div>
</div>
`;

exports[`TranslatorHeader 02 normal 1`] = `
<div>
  <div
    className="giu-floats"
    style={
      Object {
        "height": 0,
        "left": 0,
        "position": "absolute",
        "top": 0,
        "width": 0,
      }
    }
  />
  <div
    className="tableHeaderRow"
    style={
      Object {
        "WebkitFlex": "none",
        "display": "flex",
        "flex": "none",
        "flexDirection": "row",
        "fontWeight": "bold",
        "position": "relative",
      }
    }
  >
    <div
      style={
        Object {
          "WebkitFlex": "1 1 0px",
          "backgroundColor": "#f2f0ff",
          "borderBottom": "1px solid #1600a3",
          "flex": "1 1 0px",
          "fontWeight": 900,
          "letterSpacing": 3,
          "marginRight": 5,
          "paddingBottom": 3,
          "paddingLeft": 5,
          "paddingRight": 17,
          "paddingTop": 3,
          "textAlign": "center",
        }
      }
    >
      MESSAGES
       
      <span
        style={
          Object {
            "color": "darkgrey",
          }
        }
      >
        [
        <span
          title="Used messages"
        >
          2
        </span>
         / 
        <span
          title="Total messages"
        >
          2
        </span>
        ]
      </span>
       
      <i
        className="giu-icon fa fa-refresh"
        onClick={[Function]}
        style={
          Object {
            "color": undefined,
            "cursor": "pointer",
            "fontSize": undefined,
            "letterSpacing": "normal",
          }
        }
        title="Parse source files to update the message list"
      />
    </div>
    <div
      className="madyLangHeader"
      style={
        Object {
          "WebkitFlex": "1 1 0px",
          "backgroundColor": "#f2f0ff",
          "borderBottom": "1px solid #1600a3",
          "flex": "1 1 0px",
          "fontWeight": 900,
          "letterSpacing": 3,
          "marginRight": 5,
          "paddingBottom": 3,
          "paddingLeft": 5,
          "paddingRight": 5,
          "paddingTop": 3,
          "textAlign": "center",
        }
      }
    >
      <div
        style={
          Object {
            "display": "inline-block",
            "paddingRight": 5,
            "position": "relative",
          }
        }
        title="Change language"
      >
        <i
          className="giu-icon fa fa-caret-down"
          style={
            Object {
              "color": undefined,
              "cursor": "pointer",
              "fontSize": undefined,
              "letterSpacing": "normal",
              "marginRight": 5,
            }
          }
        />
        ca
        <select
          className="giu-select-native"
          id={0}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          style={
            Object {
              "backgroundColor": "default",
              "border": "default",
              "color": "inherit",
              "cursor": "pointer",
              "fontFamily": "inherit",
              "fontSize": "inherit",
              "fontWeight": "inherit",
              "left": 0,
              "opacity": 0,
              "position": "absolute",
              "top": 0,
              "width": "100%",
            }
          }
          type="native"
          value="\\"ca\\""
        >
          <option
            id="\\"es\\""
            value="\\"es\\""
          >
            es
          </option>
          <option
            id="\\"ca\\""
            value="\\"ca\\""
          >
            ca
          </option>
          <option
            id="\\"en\\""
            value="\\"en\\""
          >
            en
          </option>
        </select>
      </div>
       
      <span
        style={
          Object {
            "color": "darkgrey",
          }
        }
      >
        [
        <span
          title="Translations"
        >
          1
        </span>
         / 
        <span
          title="Used messages"
        >
          2
        </span>
        ]
      </span>
       
      <i
        className="giu-icon fa fa-remove"
        id={0}
        style={
          Object {
            "color": undefined,
            "cursor": "pointer",
            "fontSize": undefined,
            "letterSpacing": "normal",
          }
        }
        title="Remove column (does NOT delete any translations)"
      />
    </div>
    <div
      className="madyLangHeader"
      style={
        Object {
          "WebkitFlex": "1 1 0px",
          "backgroundColor": "#f2f0ff",
          "borderBottom": "1px solid #1600a3",
          "flex": "1 1 0px",
          "fontWeight": 900,
          "letterSpacing": 3,
          "marginRight": 5,
          "paddingBottom": 3,
          "paddingLeft": 5,
          "paddingRight": 5,
          "paddingTop": 3,
          "textAlign": "center",
        }
      }
    >
      <div
        style={
          Object {
            "display": "inline-block",
            "paddingRight": 5,
            "position": "relative",
          }
        }
        title="Change language"
      >
        <i
          className="giu-icon fa fa-caret-down"
          style={
            Object {
              "color": undefined,
              "cursor": "pointer",
              "fontSize": undefined,
              "letterSpacing": "normal",
              "marginRight": 5,
            }
          }
        />
        es
        <select
          className="giu-select-native"
          id={1}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          style={
            Object {
              "backgroundColor": "default",
              "border": "default",
              "color": "inherit",
              "cursor": "pointer",
              "fontFamily": "inherit",
              "fontSize": "inherit",
              "fontWeight": "inherit",
              "left": 0,
              "opacity": 0,
              "position": "absolute",
              "top": 0,
              "width": "100%",
            }
          }
          type="native"
          value="\\"es\\""
        >
          <option
            id="\\"es\\""
            value="\\"es\\""
          >
            es
          </option>
          <option
            id="\\"ca\\""
            value="\\"ca\\""
          >
            ca
          </option>
          <option
            id="\\"en\\""
            value="\\"en\\""
          >
            en
          </option>
        </select>
      </div>
       
      <span
        style={
          Object {
            "color": "darkgrey",
          }
        }
      >
        [
        <span
          title="Translations"
        >
          1
        </span>
         / 
        <span
          title="Used messages"
        >
          2
        </span>
        ]
      </span>
       
      <i
        className="giu-icon fa fa-remove"
        id={1}
        style={
          Object {
            "color": undefined,
            "cursor": "pointer",
            "fontSize": undefined,
            "letterSpacing": "normal",
          }
        }
        title="Remove column (does NOT delete any translations)"
      />
    </div>
    <div
      id="madyBtnAddLang"
      style={
        Object {
          "cursor": "pointer",
          "fontWeight": 900,
          "letterSpacing": 3,
          "padding": "3px 6px",
          "position": "absolute",
          "right": 5,
          "top": 0,
        }
      }
      title="Add column"
    >
      <i
        className="giu-icon fa fa-plus"
        style={
          Object {
            "color": undefined,
            "cursor": "pointer",
            "fontSize": undefined,
            "letterSpacing": "normal",
          }
        }
      />
    </div>
    <div
      style={
        Object {
          "WebkitFlex": "0 0 0px",
          "flex": "0 0 0px",
        }
      }
    />
  </div>
</div>
------------HTML PREVIEW---------------
<div>
  <div
    class="giu-floats"
    style="height:0;left:0;position:absolute;top:0;width:0;"
  >
  </div>
  <div
    class="tableHeaderRow"
    style="-webkit-flex:none;display:flex;flex:none;flex-direction:row;font-weight:bold;position:relative;"
  >
    <div style="-webkit-flex:1 1 0px;background-color:#f2f0ff;border-bottom:1px solid #1600a3;flex:1 1 0px;font-weight:900;letter-spacing:3px;margin-right:5px;padding-bottom:3px;padding-left:5px;padding-right:17px;padding-top:3px;text-align:center;">
      MESSAGES
       
      <span style="color:darkgrey;">
        [
        <span title="Used messages">
          2
        </span>
         / 
        <span title="Total messages">
          2
        </span>
        ]
      </span>
       
      <i
        class="giu-icon fa fa-refresh"
        style="cursor:pointer;letter-spacing:normal;"
        title="Parse source files to update the message list"
      >
      </i>
    </div>
    <div
      class="madyLangHeader"
      style="-webkit-flex:1 1 0px;background-color:#f2f0ff;border-bottom:1px solid #1600a3;flex:1 1 0px;font-weight:900;letter-spacing:3px;margin-right:5px;padding-bottom:3px;padding-left:5px;padding-right:5px;padding-top:3px;text-align:center;"
    >
      <div
        style="display:inline-block;padding-right:5px;position:relative;"
        title="Change language"
      >
        <i
          class="giu-icon fa fa-caret-down"
          style="cursor:pointer;letter-spacing:normal;margin-right:5px;"
        >
        </i>
        ca
        <select
          class="giu-select-native"
          style="background-color:default;border:default;color:inherit;cursor:pointer;font-family:inherit;font-size:inherit;font-weight:inherit;left:0;opacity:0;position:absolute;top:0;width:100%;"
          type="native"
          value="\\"ca\\""
        >
          <option
            id="\\"es\\""
            value="\\"es\\""
          >
            es
          </option>
          <option
            id="\\"ca\\""
            value="\\"ca\\""
          >
            ca
          </option>
          <option
            id="\\"en\\""
            value="\\"en\\""
          >
            en
          </option>
        </select>
      </div>
       
      <span style="color:darkgrey;">
        [
        <span title="Translations">
          1
        </span>
         / 
        <span title="Used messages">
          2
        </span>
        ]
      </span>
       
      <i
        class="giu-icon fa fa-remove"
        style="cursor:pointer;letter-spacing:normal;"
        title="Remove column (does NOT delete any translations)"
      >
      </i>
    </div>
    <div
      class="madyLangHeader"
      style="-webkit-flex:1 1 0px;background-color:#f2f0ff;border-bottom:1px solid #1600a3;flex:1 1 0px;font-weight:900;letter-spacing:3px;margin-right:5px;padding-bottom:3px;padding-left:5px;padding-right:5px;padding-top:3px;text-align:center;"
    >
      <div
        style="display:inline-block;padding-right:5px;position:relative;"
        title="Change language"
      >
        <i
          class="giu-icon fa fa-caret-down"
          style="cursor:pointer;letter-spacing:normal;margin-right:5px;"
        >
        </i>
        es
        <select
          class="giu-select-native"
          style="background-color:default;border:default;color:inherit;cursor:pointer;font-family:inherit;font-size:inherit;font-weight:inherit;left:0;opacity:0;position:absolute;top:0;width:100%;"
          type="native"
          value="\\"es\\""
        >
          <option
            id="\\"es\\""
            value="\\"es\\""
          >
            es
          </option>
          <option
            id="\\"ca\\""
            value="\\"ca\\""
          >
            ca
          </option>
          <option
            id="\\"en\\""
            value="\\"en\\""
          >
            en
          </option>
        </select>
      </div>
       
      <span style="color:darkgrey;">
        [
        <span title="Translations">
          1
        </span>
         / 
        <span title="Used messages">
          2
        </span>
        ]
      </span>
       
      <i
        class="giu-icon fa fa-remove"
        style="cursor:pointer;letter-spacing:normal;"
        title="Remove column (does NOT delete any translations)"
      >
      </i>
    </div>
    <div
      id="madyBtnAddLang"
      style="cursor:pointer;font-weight:900;letter-spacing:3px;padding:3px 6px;position:absolute;right:5px;top:0;"
      title="Add column"
    >
      <i
        class="giu-icon fa fa-plus"
        style="cursor:pointer;letter-spacing:normal;"
      >
      </i>
    </div>
    <div style="-webkit-flex:0 0 0px;flex:0 0 0px;"></div>
  </div>
</div>
`;

exports[`TranslatorHeader 03 all columns shown 1`] = `
<div>
  <div
    className="giu-floats"
    style={
      Object {
        "height": 0,
        "left": 0,
        "position": "absolute",
        "top": 0,
        "width": 0,
      }
    }
  />
  <div
    className="tableHeaderRow"
    style={
      Object {
        "WebkitFlex": "none",
        "display": "flex",
        "flex": "none",
        "flexDirection": "row",
        "fontWeight": "bold",
        "position": "relative",
      }
    }
  >
    <div
      style={
        Object {
          "WebkitFlex": "1 1 0px",
          "backgroundColor": "#f2f0ff",
          "borderBottom": "1px solid #1600a3",
          "flex": "1 1 0px",
          "fontWeight": 900,
          "letterSpacing": 3,
          "marginRight": 5,
          "paddingBottom": 3,
          "paddingLeft": 5,
          "paddingRight": 17,
          "paddingTop": 3,
          "textAlign": "center",
        }
      }
    >
      MESSAGES
       
      <span
        style={
          Object {
            "color": "darkgrey",
          }
        }
      >
        [
        <span
          title="Used messages"
        >
          2
        </span>
         / 
        <span
          title="Total messages"
        >
          2
        </span>
        ]
      </span>
       
      <i
        className="giu-icon fa fa-refresh"
        onClick={[Function]}
        style={
          Object {
            "color": undefined,
            "cursor": "pointer",
            "fontSize": undefined,
            "letterSpacing": "normal",
          }
        }
        title="Parse source files to update the message list"
      />
    </div>
    <div
      className="madyLangHeader"
      style={
        Object {
          "WebkitFlex": "1 1 0px",
          "backgroundColor": "#f2f0ff",
          "borderBottom": "1px solid #1600a3",
          "flex": "1 1 0px",
          "fontWeight": 900,
          "letterSpacing": 3,
          "marginRight": 5,
          "paddingBottom": 3,
          "paddingLeft": 5,
          "paddingRight": 5,
          "paddingTop": 3,
          "textAlign": "center",
        }
      }
    >
      <div
        style={
          Object {
            "display": "inline-block",
            "paddingRight": 5,
            "position": "relative",
          }
        }
        title="Change language"
      >
        <i
          className="giu-icon fa fa-caret-down"
          style={
            Object {
              "color": undefined,
              "cursor": "pointer",
              "fontSize": undefined,
              "letterSpacing": "normal",
              "marginRight": 5,
            }
          }
        />
        ca
        <select
          className="giu-select-native"
          id={0}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          style={
            Object {
              "backgroundColor": "default",
              "border": "default",
              "color": "inherit",
              "cursor": "pointer",
              "fontFamily": "inherit",
              "fontSize": "inherit",
              "fontWeight": "inherit",
              "left": 0,
              "opacity": 0,
              "position": "absolute",
              "top": 0,
              "width": "100%",
            }
          }
          type="native"
          value="\\"ca\\""
        >
          <option
            id="\\"es\\""
            value="\\"es\\""
          >
            es
          </option>
          <option
            id="\\"ca\\""
            value="\\"ca\\""
          >
            ca
          </option>
          <option
            id="\\"en\\""
            value="\\"en\\""
          >
            en
          </option>
        </select>
      </div>
       
      <span
        style={
          Object {
            "color": "darkgrey",
          }
        }
      >
        [
        <span
          title="Translations"
        >
          1
        </span>
         / 
        <span
          title="Used messages"
        >
          2
        </span>
        ]
      </span>
       
      <i
        className="giu-icon fa fa-remove"
        id={0}
        style={
          Object {
            "color": undefined,
            "cursor": "pointer",
            "fontSize": undefined,
            "letterSpacing": "normal",
          }
        }
        title="Remove column (does NOT delete any translations)"
      />
    </div>
    <div
      className="madyLangHeader"
      style={
        Object {
          "WebkitFlex": "1 1 0px",
          "backgroundColor": "#f2f0ff",
          "borderBottom": "1px solid #1600a3",
          "flex": "1 1 0px",
          "fontWeight": 900,
          "letterSpacing": 3,
          "marginRight": 5,
          "paddingBottom": 3,
          "paddingLeft": 5,
          "paddingRight": 5,
          "paddingTop": 3,
          "textAlign": "center",
        }
      }
    >
      <div
        style={
          Object {
            "display": "inline-block",
            "paddingRight": 5,
            "position": "relative",
          }
        }
        title="Change language"
      >
        <i
          className="giu-icon fa fa-caret-down"
          style={
            Object {
              "color": undefined,
              "cursor": "pointer",
              "fontSize": undefined,
              "letterSpacing": "normal",
              "marginRight": 5,
            }
          }
        />
        es
        <select
          className="giu-select-native"
          id={1}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          style={
            Object {
              "backgroundColor": "default",
              "border": "default",
              "color": "inherit",
              "cursor": "pointer",
              "fontFamily": "inherit",
              "fontSize": "inherit",
              "fontWeight": "inherit",
              "left": 0,
              "opacity": 0,
              "position": "absolute",
              "top": 0,
              "width": "100%",
            }
          }
          type="native"
          value="\\"es\\""
        >
          <option
            id="\\"es\\""
            value="\\"es\\""
          >
            es
          </option>
          <option
            id="\\"ca\\""
            value="\\"ca\\""
          >
            ca
          </option>
          <option
            id="\\"en\\""
            value="\\"en\\""
          >
            en
          </option>
        </select>
      </div>
       
      <span
        style={
          Object {
            "color": "darkgrey",
          }
        }
      >
        [
        <span
          title="Translations"
        >
          1
        </span>
         / 
        <span
          title="Used messages"
        >
          2
        </span>
        ]
      </span>
       
      <i
        className="giu-icon fa fa-remove"
        id={1}
        style={
          Object {
            "color": undefined,
            "cursor": "pointer",
            "fontSize": undefined,
            "letterSpacing": "normal",
          }
        }
        title="Remove column (does NOT delete any translations)"
      />
    </div>
    <div
      className="madyLangHeader"
      style={
        Object {
          "WebkitFlex": "1 1 0px",
          "backgroundColor": "#f2f0ff",
          "borderBottom": "1px solid #1600a3",
          "flex": "1 1 0px",
          "fontWeight": 900,
          "letterSpacing": 3,
          "marginRight": 5,
          "paddingBottom": 3,
          "paddingLeft": 5,
          "paddingRight": 5,
          "paddingTop": 3,
          "textAlign": "center",
        }
      }
    >
      <div
        style={
          Object {
            "display": "inline-block",
            "paddingRight": 5,
            "position": "relative",
          }
        }
        title="Change language"
      >
        <i
          className="giu-icon fa fa-caret-down"
          style={
            Object {
              "color": undefined,
              "cursor": "pointer",
              "fontSize": undefined,
              "letterSpacing": "normal",
              "marginRight": 5,
            }
          }
        />
        en
        <select
          className="giu-select-native"
          id={2}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          style={
            Object {
              "backgroundColor": "default",
              "border": "default",
              "color": "inherit",
              "cursor": "pointer",
              "fontFamily": "inherit",
              "fontSize": "inherit",
              "fontWeight": "inherit",
              "left": 0,
              "opacity": 0,
              "position": "absolute",
              "top": 0,
              "width": "100%",
            }
          }
          type="native"
          value="\\"en\\""
        >
          <option
            id="\\"es\\""
            value="\\"es\\""
          >
            es
          </option>
          <option
            id="\\"ca\\""
            value="\\"ca\\""
          >
            ca
          </option>
          <option
            id="\\"en\\""
            value="\\"en\\""
          >
            en
          </option>
        </select>
      </div>
       
      <span
        style={
          Object {
            "color": "darkgrey",
          }
        }
      >
        [
        <span
          title="Translations"
        >
          0
        </span>
         / 
        <span
          title="Used messages"
        >
          2
        </span>
        ]
      </span>
       
      <i
        className="giu-icon fa fa-remove"
        id={2}
        style={
          Object {
            "color": undefined,
            "cursor": "pointer",
            "fontSize": undefined,
            "letterSpacing": "normal",
          }
        }
        title="Remove column (does NOT delete any translations)"
      />
    </div>
    <div
      id="madyBtnAddLang"
      style={
        Object {
          "cursor": undefined,
          "fontWeight": 900,
          "letterSpacing": 3,
          "padding": "3px 6px",
          "position": "absolute",
          "right": 5,
          "top": 0,
        }
      }
      title="Add column"
    >
      <i
        className="giu-icon fa fa-plus"
        style={
          Object {
            "color": "#999999",
            "cursor": undefined,
            "fontSize": undefined,
            "letterSpacing": "normal",
          }
        }
      />
    </div>
    <div
      style={
        Object {
          "WebkitFlex": "0 0 0px",
          "flex": "0 0 0px",
        }
      }
    />
  </div>
</div>
------------HTML PREVIEW---------------
<div>
  <div
    class="giu-floats"
    style="height:0;left:0;position:absolute;top:0;width:0;"
  >
  </div>
  <div
    class="tableHeaderRow"
    style="-webkit-flex:none;display:flex;flex:none;flex-direction:row;font-weight:bold;position:relative;"
  >
    <div style="-webkit-flex:1 1 0px;background-color:#f2f0ff;border-bottom:1px solid #1600a3;flex:1 1 0px;font-weight:900;letter-spacing:3px;margin-right:5px;padding-bottom:3px;padding-left:5px;padding-right:17px;padding-top:3px;text-align:center;">
      MESSAGES
       
      <span style="color:darkgrey;">
        [
        <span title="Used messages">
          2
        </span>
         / 
        <span title="Total messages">
          2
        </span>
        ]
      </span>
       
      <i
        class="giu-icon fa fa-refresh"
        style="cursor:pointer;letter-spacing:normal;"
        title="Parse source files to update the message list"
      >
      </i>
    </div>
    <div
      class="madyLangHeader"
      style="-webkit-flex:1 1 0px;background-color:#f2f0ff;border-bottom:1px solid #1600a3;flex:1 1 0px;font-weight:900;letter-spacing:3px;margin-right:5px;padding-bottom:3px;padding-left:5px;padding-right:5px;padding-top:3px;text-align:center;"
    >
      <div
        style="display:inline-block;padding-right:5px;position:relative;"
        title="Change language"
      >
        <i
          class="giu-icon fa fa-caret-down"
          style="cursor:pointer;letter-spacing:normal;margin-right:5px;"
        >
        </i>
        ca
        <select
          class="giu-select-native"
          style="background-color:default;border:default;color:inherit;cursor:pointer;font-family:inherit;font-size:inherit;font-weight:inherit;left:0;opacity:0;position:absolute;top:0;width:100%;"
          type="native"
          value="\\"ca\\""
        >
          <option
            id="\\"es\\""
            value="\\"es\\""
          >
            es
          </option>
          <option
            id="\\"ca\\""
            value="\\"ca\\""
          >
            ca
          </option>
          <option
            id="\\"en\\""
            value="\\"en\\""
          >
            en
          </option>
        </select>
      </div>
       
      <span style="color:darkgrey;">
        [
        <span title="Translations">
          1
        </span>
         / 
        <span title="Used messages">
          2
        </span>
        ]
      </span>
       
      <i
        class="giu-icon fa fa-remove"
        style="cursor:pointer;letter-spacing:normal;"
        title="Remove column (does NOT delete any translations)"
      >
      </i>
    </div>
    <div
      class="madyLangHeader"
      style="-webkit-flex:1 1 0px;background-color:#f2f0ff;border-bottom:1px solid #1600a3;flex:1 1 0px;font-weight:900;letter-spacing:3px;margin-right:5px;padding-bottom:3px;padding-left:5px;padding-right:5px;padding-top:3px;text-align:center;"
    >
      <div
        style="display:inline-block;padding-right:5px;position:relative;"
        title="Change language"
      >
        <i
          class="giu-icon fa fa-caret-down"
          style="cursor:pointer;letter-spacing:normal;margin-right:5px;"
        >
        </i>
        es
        <select
          class="giu-select-native"
          style="background-color:default;border:default;color:inherit;cursor:pointer;font-family:inherit;font-size:inherit;font-weight:inherit;left:0;opacity:0;position:absolute;top:0;width:100%;"
          type="native"
          value="\\"es\\""
        >
          <option
            id="\\"es\\""
            value="\\"es\\""
          >
            es
          </option>
          <option
            id="\\"ca\\""
            value="\\"ca\\""
          >
            ca
          </option>
          <option
            id="\\"en\\""
            value="\\"en\\""
          >
            en
          </option>
        </select>
      </div>
       
      <span style="color:darkgrey;">
        [
        <span title="Translations">
          1
        </span>
         / 
        <span title="Used messages">
          2
        </span>
        ]
      </span>
       
      <i
        class="giu-icon fa fa-remove"
        style="cursor:pointer;letter-spacing:normal;"
        title="Remove column (does NOT delete any translations)"
      >
      </i>
    </div>
    <div
      class="madyLangHeader"
      style="-webkit-flex:1 1 0px;background-color:#f2f0ff;border-bottom:1px solid #1600a3;flex:1 1 0px;font-weight:900;letter-spacing:3px;margin-right:5px;padding-bottom:3px;padding-left:5px;padding-right:5px;padding-top:3px;text-align:center;"
    >
      <div
        style="display:inline-block;padding-right:5px;position:relative;"
        title="Change language"
      >
        <i
          class="giu-icon fa fa-caret-down"
          style="cursor:pointer;letter-spacing:normal;margin-right:5px;"
        >
        </i>
        en
        <select
          class="giu-select-native"
          style="background-color:default;border:default;color:inherit;cursor:pointer;font-family:inherit;font-size:inherit;font-weight:inherit;left:0;opacity:0;position:absolute;top:0;width:100%;"
          type="native"
          value="\\"en\\""
        >
          <option
            id="\\"es\\""
            value="\\"es\\""
          >
            es
          </option>
          <option
            id="\\"ca\\""
            value="\\"ca\\""
          >
            ca
          </option>
          <option
            id="\\"en\\""
            value="\\"en\\""
          >
            en
          </option>
        </select>
      </div>
       
      <span style="color:darkgrey;">
        [
        <span title="Translations">
          0
        </span>
         / 
        <span title="Used messages">
          2
        </span>
        ]
      </span>
       
      <i
        class="giu-icon fa fa-remove"
        style="cursor:pointer;letter-spacing:normal;"
        title="Remove column (does NOT delete any translations)"
      >
      </i>
    </div>
    <div
      id="madyBtnAddLang"
      style="font-weight:900;letter-spacing:3px;padding:3px 6px;position:absolute;right:5px;top:0;"
      title="Add column"
    >
      <i
        class="giu-icon fa fa-plus"
        style="color:#999999;letter-spacing:normal;"
      >
      </i>
    </div>
    <div style="-webkit-flex:0 0 0px;flex:0 0 0px;"></div>
  </div>
</div>
`;
